<resources>
    <string name="app_name">LookApp</string>

    <!-- Generic Strings -->
    <string name="error_loading">¡Oops! An error has occurred :$</string>
    <string name="error_caps">ERROR</string>
    <string name="search_ellipsis">Search...</string>
    <string name="author">Antonio A. Jiménez N.</string>
    <string name="author_email">aajn88@gmail.com</string>
    <string name="author_image">https://avatars3.githubusercontent.com/u/5447552?v=3&amp;s=460</string>

    <!-- Transitions -->
    <string name="transition_view">transition_view</string>
    <string name="transition_textview">transition_textview</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Drawer Menu -->
    <string name="all_apps_menu">The whole world</string>
    <string name="travel_menu">Travel</string>
    <string name="social_menu">Social Networking</string>
    <string name="photo_video_menu">Photo &amp; Video</string>
    <string name="navigation_menu">Navigation</string>
    <string name="music_menu">Music</string>
    <string name="games_menu">Games</string>
    <string name="entertainment_menu">Entertainment</string>
    <string name="education_menu">Education</string>
    <string name="share_menu">Share</string>

    <!-- Whole World -->
    <string name="recommended_you">Recommended for you</string>

    <!-- App Detail -->
    <string name="free_caps">FREE</string>
    <string name="installed_caps">INSTALLED</string>
    <string name="summary">Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
